# dmu

./: README.md  guild.yml  pyproject.toml
deep_memory_update/data/: __init__.py  addition_sequence.py  data_module.py  generator.py  noisy_sequence.py  order_sequence.py  penn_treebank.py  polyphonic_music.py  translation.py  utils.py
deep_memory_update/experiments/: experiment.py
deep_memory_update/experiments/addition_sequence/: deep_gru_training.py  deep_lstm_training.py  dmu_training.py  gru_training.py  lstm_training.py  rhn_training.py  rnn_training.py
deep_memory_update/experiments/noisy_sequence/: deep_gru_training.py  deep_lstm_training.py  dmu_training.py  gru_training.py  lstm_training.py  rhn_training.py  rnn_training.py
deep_memory_update/experiments/order_sequence/: deep_gru_training.py  deep_lstm_training.py  dmu_training.py  gru_training.py  lstm_training.py  rhn_training.py  rnn_training.py
deep_memory_update/experiments/penn_treebank/: dmu_training.py  rhn_training.py
deep_memory_update/experiments/polyphonic_music/: dmu_training.py  rhn_training.py
deep_memory_update/experiments/translation/: dmu_training.py  rhn_training.py
deep_memory_update/layers/: __init__.py  dmu.py  native_rnn_layer.py  rhn.py  s_rnn_layer.py  utils.py
deep_memory_update/models/: __init__.py  base_model.py  dmu_model.py  native_rnn_model.py  rhn_model.py  utils.py
experiments_repro/: adding.sh  nat_lang.sh  noise_seq.sh  poly_music.sh  temp_ord.sh  translation.sh
